--- a/.gitignore
+++ b/.gitignore
@@ -11,5 +11,11 @@ venv
 
 # Project
 storage
-export
+
+# export
 # db
+
+# Задокументированно, так как в ТЗ
+# указана необходимость заполнения
+# тестовыми данными. В прод такое 
+#        я бы не выктил)
